
Adjust version due to incompatible changes.
----------------------------------------------------------------------
Mon Sep 26 16:38:59 2011                        Michael Jennings (mej)

Port of my IPoIB provisioning patch to newer busybox.
----------------------------------------------------------------------
Tue Sep 27 12:48:39 2011                        Michael Jennings (mej)

Clean up spec file, correct typos.
----------------------------------------------------------------------
Mon Oct 10 17:01:26 2011                        Michael Jennings (mej)

I think this is closer to what was intended.
----------------------------------------------------------------------
Tue Oct 11 10:55:42 2011                        Michael Jennings (mej)

Set svn:ignore for provision tree.
----------------------------------------------------------------------
Mon Dec 19 16:37:42 2011                        Michael Jennings (mej)

Fix POD formatting for =cut directive.
----------------------------------------------------------------------
Tue Feb  7 11:12:14 2012                        Michael Jennings (mej)

Refactored wwnodescan to use tcpdump to listen for broadcast DHCP
requests from unconfigured hosts and add them as new Warewulf nodes.
Also added a test mode and fixed the output levels.
----------------------------------------------------------------------
Fri Mar  2 13:04:03 2012                        Michael Jennings (mej)

Bump version to 3.2.

Significant changes to wwnodescan.  Added a "replace" option to update
old nodes with new MAC addresses.  Added checks for node name, IP
address, and MAC address conflicts.  Added calculation of the maximum
IP address in the range provided rather than just counting up
infinitely.
----------------------------------------------------------------------
Mon Mar 12 13:16:56 2012                        Michael Jennings (mej)

Improved SVN revision detection.
----------------------------------------------------------------------